--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -91,7 +91,7 @@ html, body {
 }
 
 section#inicio {
-  background-image: url("../img/main-banner.jpg");
+  background-image: url("../img/main-banner-1.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
